fixed favourites alignment

--- a/app/assets/stylesheets/favourites.scss
+++ b/app/assets/stylesheets/favourites.scss
@@ -12,5 +12,5 @@ ul{
 }
 div{
   width: 100%;
-  margin: auto;
+  text-align: center;
 }
